--- a/login.html
+++ b/login.html
@@ -156,5 +156,8 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"
     ></script>
+    <script>
+      
+    </script>
   </body>
 </html>
