--- a/homePage.html
+++ b/homePage.html
@@ -419,8 +419,8 @@
                 alt="album"
                 style="width: 100%"
               />
-              <a onclick="loadBooks()"
-                href=""
+              <a 
+                href="javascript:loadBooks(event)"
                 style="
                   display: flex;
                   text-decoration: none;
@@ -432,7 +432,7 @@
                 "
                 >Shahram</a
               >
-              <button onclick="loadBooks(event)" href="">queen</button>
+            
             </div>
             <div
               class="single-album col-12 col-sm-4 col-lg-2 py-2 py-md-1 px-1 d-flex"
