--- a/homePage.html
+++ b/homePage.html
@@ -286,8 +286,9 @@
                 alt="album"
                 style="width: 100%"
               />
+			
               <a
-                href="./artistPlusSidebar.html"
+                href="album.html"
                 style="
                   display: flex;
                   text-decoration: none;
@@ -297,9 +298,11 @@
                   margin-top: 5px;
                   font-weight: 500;
                 "
-                >The Police</a
-              >
+				
+                >The Police</a>
+	
             </div>
+			
             <div
               class="single-album col-12 col-sm-4 col-lg-2 py-2 py-md-1 px-1 d-flex"
               style="justify-content: center; flex-direction: column"
@@ -554,7 +557,7 @@
             </div>
           </div>
         </div>
-        <div class="albums mt-5">
+        <div class="album mt-5">
           <h2 class="mb-3 pl-5">Albums</h2>
           <div
             class="album-cover d-flex px-5"
@@ -900,5 +903,7 @@
         .getElementById("close-button")
         .addEventListener("click", openMenu);
     </script>
+
+	<script src="album.js"></script>
   </body>
 </html>
