--- a/album.html
+++ b/album.html
@@ -272,7 +272,7 @@
 
       <div class="page-content" id="pageContent">
         <div id="albumStyle" class="container-fluid">
-          <div class="row">
+          <div id="daynamic" class="row">
             <div class="col-12 col-lg-3 offset-lg-1 py-5">
               <div class="d-flex justify-content-center">
                 <img
@@ -727,5 +727,6 @@
       };
       clickLike();
     </script>
+	<script src="album.js"></script>
   </body>
 </html>
