--- a/homePage.html
+++ b/homePage.html
@@ -445,7 +445,7 @@
                 style="width: 100%"
               />
               <a
-                href="./artistPlusSidebar.html"
+                href="javascript:loadNamjoo(event)"
                 style="
                   display: flex;
                   text-decoration: none;
@@ -469,7 +469,7 @@
                 style="width: 100%"
               />
               <a
-                href="./artistPlusSidebar.html"
+              href="javascript:loadMetallica(event)"
                 style="
                   display: flex;
                   text-decoration: none;
@@ -493,7 +493,7 @@
                 style="width: 100%"
               />
               <a
-                href="./artistPlusSidebar.html"
+              href="javascript:loadPinkFloyd(event)"
                 style="
                   display: flex;
                   text-decoration: none;
@@ -517,7 +517,7 @@
                 style="width: 100%"
               />
               <a
-                href="./artistPlusSidebar.html"
+              href="javascript:loadRollingStones(event)"
                 style="
                   display: flex;
                   text-decoration: none;
@@ -541,7 +541,7 @@
                 style="width: 100%"
               />
               <a
-                href="./artistPlusSidebar.html"
+              href="javascript:loadLedZepplin(event)"
                 style="
                   display: flex;
                   text-decoration: none;
