--- a/homePage.html
+++ b/homePage.html
@@ -289,7 +289,7 @@
               />
 			
               <a
-                href="album.html"
+                href="album.html?id=75621062"
                 style="
                   display: flex;
                   text-decoration: none;
